ADD: VUE.js prod library

--- a/operator/src/main/resources/META-INF/resources/index.html
+++ b/operator/src/main/resources/META-INF/resources/index.html
@@ -28,10 +28,10 @@
 		<script src="js/data/profiles.js"></script>
 		-->
 
-		<!-- PROD vue -->
-		<script src="js/vue@2.6.0.min.js"></script>
+		<!-- PROD vue / 2.6.0 -->
+		<script src="js/vue.min.js"></script>
 		
-		<!-- DEV vue -->
+		<!-- DEV vue / 2.6.0 -->
 		<!--<script src="js/vue.js"></script>-->
 		
 		<script src="js/vue-router.js"></script>
