feat: Include Grafana view into stackgres web UI
Conflicts:
	operator/src/main/resources/META-INF/resources/stackgres/index.html
	operator/src/main/resources/META-INF/resources/stackgres/js/components/ClusterStatus.vue.js
	operator/src/main/resources/META-INF/resources/stackgres/js/components/Nav.vue.js
	operator/src/main/resources/META-INF/resources/stackgres/js/stackgres.js
	operator/src/main/resources/META-INF/resources/stackgres/style.css

--- a/operator/src/main/resources/META-INF/resources/stackgres/index.html
+++ b/operator/src/main/resources/META-INF/resources/stackgres/index.html
@@ -29,10 +29,10 @@
 		-->
 
 		<!-- PROD vue / 2.6.0 -->
-		<script src="js/vue.min.js"></script>
+		<!--<script src="js/vue.min.js"></script>-->
 		
 		<!-- DEV vue / 2.6.0 -->
-		<!--<script src="js/vue.js"></script>-->
+		<script src="js/vue.js"></script>
 		
 		<script src="js/vue-router.js"></script>
 		<script src="js/axios.min.js"></script>
@@ -54,6 +54,7 @@
 	<script type="text/javascript" src="js/components/PgConfig.vue.js"></script>
 	<script type="text/javascript" src="js/components/PoolConfig.vue.js"></script>
 	<script type="text/javascript" src="js/components/SGProfiles.vue.js"></script>
+	<script type="text/javascript" src="js/components/Grafana.vue.js"></script>
 
 	<script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
 	<script type="text/javascript" src="js/stackgres.js"></script>
