added loading icon when pulling data && setup pooling interval to 10sec

--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
@@ -28,6 +28,8 @@
 		<script src="js/axios.min.js"></script>
 	</head>
 <body>
+
+	<div id="loader"></div>
 	
 	<div id="app">
 		<sg-side></sg-side>
