backport: multiple UI fixes and features
* added loading icon when pulling data && setup pooling interval to
10sec
* set stackgres api url
* Fix UI endpoint var typos

commits hashes:

c2bab7fce593d3ba3fbe920102dc368e0d43cbe7
02db526dc47ce8eda9d8dacd65f72d4ed0d45c93
5e5d368a7c1013cd8fd96ed85db887623b9544e3
a4a9ec991bea1ee642b68570d2d1407fa5de6088
a1a6890cf17f6a82553ff325d2b3cce27937c05f

--- a/operator/src/main/resources/META-INF/resources/stackgres/index.html
+++ b/operator/src/main/resources/META-INF/resources/stackgres/index.html
@@ -8,28 +8,18 @@
 		<meta name="author" content="">
 		<meta name="robots" content="index, follow">
 
-		<!--
-		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
-		<link rel="manifest" href="favicon/site.webmanifest">
-		<link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#00adb5">
-		<meta name="msapplication-TileColor" content="#00aba9">
-		<meta name="theme-color" content="#ffffff">
-		-->
+		<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+		<link rel="manifest" href="img/favicon/site.webmanifest">
+		<link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#00adb5">
+		<meta name="msapplication-TileColor" content="#00adb5">
+		<meta name="theme-color" content="#f0f0f0">
 
 		<link rel="stylesheet" type="text/css" href="style.css">
 
-		<!-- Demo Data -->
-		<!--
-		<script src="js/data/pgcluster.js"></script>
-		<script src="js/data/pgconf.js"></script>
-		<script src="js/data/poolconf.js"></script>
-		<script src="js/data/profiles.js"></script>
-		-->
-
 		<!-- PROD vue / 2.6.0 -->
-		<!--<script src="js/vue.min.js"></script>-->
+		<!-- <script src="js/vue.min.js"></script> -->
 		
 		<!-- DEV vue / 2.6.0 -->
 		<script src="js/vue.js"></script>
@@ -38,6 +28,8 @@
 		<script src="js/axios.min.js"></script>
 	</head>
 <body>
+
+	<div id="loader"></div>
 	
 	<div id="app">
 		<sg-side></sg-side>
