Setup VUE on dev mode to enable debug settings

--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
@@ -19,10 +19,10 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 
 		<!-- PROD vue / v2.6.0 -->
-		<script src="js/vue.min.js"></script>
+		<!-- <script src="js/vue.min.js"></script> -->
 		
 		<!-- DEV vue / v2.6.0 -->
-		<!-- <script src="js/vue.js"></script> -->
+		<script src="js/vue.js"></script>
 		
 		<!-- Vue Router v3.1.3 -->
 		<script src="js/vue-router.js"></script>
