ui: added backups

--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
@@ -55,6 +55,7 @@
 	<script type="text/javascript" src="js/components/ClusterStatus.vue.js"></script>
 	<script type="text/javascript" src="js/components/Side.vue.js"></script>
 	<script type="text/javascript" src="js/components/Nav.vue.js"></script>
+  <script type="text/javascript" src="js/components/Backups.vue.js"></script>
 	<script type="text/javascript" src="js/components/PgConfig.vue.js"></script>
 	<script type="text/javascript" src="js/components/PoolConfig.vue.js"></script>
 	<script type="text/javascript" src="js/components/BackupConfig.vue.js"></script>
