feat: setup cluster creation in the UI

--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
@@ -32,6 +32,9 @@
 
 		<!-- VueX v3.1.2 -->
 		<script src="js/vuex.js"></script>
+
+		<!-- Vue Loader -->
+		<script src="https://unpkg.com/http-vue-loader@1.4.1/src/httpVueLoader.js"></script>
 	</head>
 <body>
 
@@ -49,18 +52,24 @@
 	<script type="text/javascript" src="js/lib/prettycron.js"></script>
 	<script type="text/javascript" src="js/lib/jquery-3.4.1.min.js"></script>
 
-	<!-- Components -->
+	<!-- Base Components -->
 	<script type="text/javascript" src="js/components/ClusterOverview.vue.js"></script>
 	<script type="text/javascript" src="js/components/ClusterInfo.vue.js"></script>
 	<script type="text/javascript" src="js/components/ClusterStatus.vue.js"></script>
-	<script type="text/javascript" src="js/components/Side.vue.js"></script>
-	<script type="text/javascript" src="js/components/Nav.vue.js"></script>
-  <script type="text/javascript" src="js/components/Backups.vue.js"></script>
+	<script type="text/javascript" src="js/components/Backups.vue.js"></script>
 	<script type="text/javascript" src="js/components/PgConfig.vue.js"></script>
 	<script type="text/javascript" src="js/components/PoolConfig.vue.js"></script>
 	<script type="text/javascript" src="js/components/BackupConfig.vue.js"></script>
 	<script type="text/javascript" src="js/components/SGProfiles.vue.js"></script>
 	<script type="text/javascript" src="js/components/Grafana.vue.js"></script>
+
+	<!-- Action Components -->
+	<script type="text/javascript" src="js/components/Create.vue.js"></script>
+	<script type="text/javascript" src="js/components/forms/CreateCluster.vue.js"></script>
+
+	<!-- Layout Components -->
+	<script type="text/javascript" src="js/components/Side.vue.js"></script>
+	<script type="text/javascript" src="js/components/Nav.vue.js"></script>
 
 	<!-- General Scripts -->
 	<script type="text/javascript" src="js/stackgres.js"></script>
