fix: include router-view id on main layout to ensure proper render of forms when changing between edit/create function

--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
@@ -43,7 +43,7 @@
 	<div id="app">
 		<sg-nav></sg-nav>
 		<sg-side></sg-side>
-		<router-view id="main"></router-view>
+		<router-view id="main" :key="$route.path"></router-view>
 	</div>
 
 	<!-- Extra Libraries -->
