fix: added CreateBackup form

--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
@@ -70,6 +70,7 @@
 	<script type="text/javascript" src="js/components/forms/CreatePGConfig.vue.js"></script>
 	<script type="text/javascript" src="js/components/forms/CreatePoolConfig.vue.js"></script>
 	<script type="text/javascript" src="js/components/forms/CreateBackupConfig.vue.js"></script>
+	<script type="text/javascript" src="js/components/forms/CreateBackup.vue.js"></script>
 
 	<!-- Layout Components -->
 	<script type="text/javascript" src="js/components/Side.vue.js"></script>
