--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
@@ -35,6 +35,9 @@
 
 		<!-- Vue Loader -->
 		<!-- <script src="https://unpkg.com/http-vue-loader@1.4.1/src/httpVueLoader.js"></script> -->
+
+		<!-- Nunito Font -->
+		<link href="https://fonts.googleapis.com/css?family=Nunito:300,700&display=swap" rel="stylesheet">
 	</head>
 <body>
 
