fix: include Nunito semi-bold font weight

--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
@@ -37,9 +37,9 @@
 		<!-- <script src="https://unpkg.com/http-vue-loader@1.4.1/src/httpVueLoader.js"></script> -->
 
 		<!-- Nunito Font -->
-		<link href="https://fonts.googleapis.com/css?family=Nunito:300,700&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700&display=swap" rel="stylesheet">
 	</head>
-<body>
+<body class="darkmode">
 
 	<div id="loader"></div>
 	
