feat: include vue-markup library (external resource just for now)

--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
@@ -18,6 +18,9 @@
 
 		<link rel="stylesheet" type="text/css" href="style.css">
 
+		<!-- Vue.js Markdown / v2.2.4 -->
+		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vue-markdown@2.2.4/dist/vue-markdown.js"></script>
+
 		<!-- PROD vue / v2.6.0 -->
 		<!-- <script src="js/vue.min.js"></script> -->
 		
