fix: include vue-markdown as a local resource

--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
@@ -19,7 +19,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 
 		<!-- Vue.js Markdown / v2.2.4 -->
-		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/vue-markdown@2.2.4/dist/vue-markdown.js"></script>
+		<script type="text/javascript" src="js/lib/vue-markdown-2.2.4.js"></script>
 
 		<!-- PROD vue / v2.6.0 -->
 		<!-- <script src="js/vue.min.js"></script> -->
