fix: set light theme as default theme

--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
@@ -42,7 +42,7 @@
 		<!-- Nunito Font -->
 		<link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700&display=swap" rel="stylesheet">
 	</head>
-<body class="darkmode">
+<body>
 
 	<div id="loader"></div>
 	
