feat: include Logs component

--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
@@ -68,6 +68,7 @@
 	<script type="text/javascript" src="js/components/BackupConfig.vue.js"></script>
 	<script type="text/javascript" src="js/components/SGProfiles.vue.js"></script>
 	<script type="text/javascript" src="js/components/Grafana.vue.js"></script>
+	<script type="text/javascript" src="js/components/Logs.vue.js"></script>
 
 	<!-- Action Components -->
 	<script type="text/javascript" src="js/components/Create.vue.js"></script>
