feat: enable date filter on backups && fix: bug rendering new backups coming from the API when filters have already been applied

--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
@@ -39,8 +39,11 @@
 		<!-- Vue Loader -->
 		<!-- <script src="https://unpkg.com/http-vue-loader@1.4.1/src/httpVueLoader.js"></script> -->
 
-		<!-- Nunito Font -->
-		<link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700&display=swap" rel="stylesheet">
+		<!-- Nunito & Ubuntu Mono Fonts -->
+		<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&family=Ubuntu+Mono&display=swap" rel="stylesheet">
+
+		<!-- Datepicker Styling -->
+		<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 	</head>
 <body>
 
@@ -57,6 +60,7 @@
 	<script type="text/javascript" src="js/lib/later.min.js"></script>
 	<script type="text/javascript" src="js/lib/prettycron.js"></script>
 	<script type="text/javascript" src="js/lib/jquery-3.4.1.min.js"></script>
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
 
 	<!-- Base Components -->
 	<script type="text/javascript" src="js/components/ClusterOverview.vue.js"></script>
