fix: initial setup of Clone CRD function

--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
@@ -46,6 +46,19 @@
 		<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 
 		<style>
+			#nav .right > div#clone {
+				display: none;
+				position: fixed;
+				background: #fff;
+				padding: 5px 0;
+				border: 1px solid var(--gray1);
+				border-radius: 10px;
+				box-shadow: 0 0px 20px rgba(0,0,0,.05);
+				margin-left: 70px;
+				display: none;
+				line-height: 1;
+				width: 320px;
+			}
 		</style>
 	</head>
 <body>
