fix: breadcrumbs styling

--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
@@ -46,7 +46,7 @@
 		<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 
 		<style>
-			#nav .right > div#clone {
+			/*#nav .right > div#clone {
 				display: none;
 				position: fixed;
 				background: #fff;
@@ -58,7 +58,7 @@
 				display: none;
 				line-height: 1;
 				width: 320px;
-			}
+			}*/
 		</style>
 	</head>
 <body>
