--- a/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
+++ b/stackgres-k8s/src/operator/src/main/resources/META-INF/resources/stackgres/index.html
@@ -60,13 +60,22 @@
 				width: 320px;
 			}*/
 
-			tr.details.pgConfig.open div {
+			td.actions {
+				position: relative;
+				z-index: 1;
+			}
+
+			table.pgConfig.profiles td.actions a:first-of-type {
+				display: inline-block;
+			}
+
+			tr.details.pgConfig.open div, table.backupConfig .configurationDetails, table.backupConfig .storageDetails{
 				width: 50%;
 				float: left;
 				display: block;
-			}
+			} 
 
-			table.pgConfig tr.base.open td.parameters, table.pgConfig tr.base.open td.pgVersion, table.poolConfig tr.base.open td.parameters {
+			table.pgConfig tr.base.open td.parameters, table.pgConfig tr.base.open td.pgVersion, table.poolConfig tr.base.open td.parameters, table tr.open .fontZero {
 				font-size: 0;
 			}
 
@@ -88,7 +97,7 @@
 				border-bottom: 0;
 			}
 
-			table.pgConfig tr.details a, table.poolConfig tr.details a {
+			table tr.details .configurationDetails a, table tr.details .paramDetails a {
 				float: right;
 				display: inline-block;
 				padding: 2px 10px;
@@ -147,7 +156,7 @@
 				border-bottom: 1px solid #f0f0f1;
 			}
 	
-			table.pgConfig tr:nth-child(4n-2), table.pgConfig tr:nth-child(4n-2) + tr.details, table.pgConfig tr:nth-child(4n-2), table.poolConfig tr:nth-child(4n-2), table.poolConfig tr:nth-child(4n-2) + tr.details, table.poolConfig tr:nth-child(4n-2) {
+			table.pgConfig tr:nth-child(4n-2), table.pgConfig tr:nth-child(4n-2) + tr.details, table.pgConfig tr:nth-child(4n-2), table.poolConfig tr:nth-child(4n-2), table.poolConfig tr:nth-child(4n-2) + tr.details, table.poolConfig tr:nth-child(4n-2), table.backupConfig tr:nth-child(4n-2), table.backupConfig tr:nth-child(4n-2) + tr.details, table.backupConfig tr:nth-child(4n-2) {
 				background: #fff;
 			}
 
@@ -178,6 +187,34 @@
 
 			td.inlineList li:not(:last-child):after {
 				content: ', ';
+			}
+
+			table.backupConfig span.title {
+				font-weight: bold;
+			}
+
+			table.backupConfig tr.details.show .configurationDetails td:first-of-type:before {
+				display:none;
+			}
+
+			table.backupConfig tr.details.show td:first-of-type {
+				padding-top: 10px !important;
+			}
+
+			tr.details td:last-of-type .configurationDetails table {
+				margin: 0 !important;
+			}
+
+			.configurationDetails span.title {
+				font-weight: bold;
+				display: inline-block;
+				padding: 10px 15px;
+			}
+
+			.backupConfig .storageDetails ul.yaml {
+				border: 1px solid #f0f0f1;
+				margin-top: 0;
+				padding: 10px 15px;
 			}
 		</style>
 	</head>
