--- a/stackgres-k8s/src/admin-ui/public/index.html
+++ b/stackgres-k8s/src/admin-ui/public/index.html
@@ -16,25 +16,25 @@
 		<meta name="msapplication-TileColor" content="#00adb5">
 		<meta name="theme-color" content="#f0f0f0">
 
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="/admin/style.css">
 
 		<!-- Vue.js Markdown / v2.2.4 -->
-		<script type="text/javascript" src="js/lib/vue-markdown-2.2.4.js"></script>
+		<script type="text/javascript" src="/admin/js/lib/vue-markdown-2.2.4.js"></script>
 
 		<!-- PROD vue / v2.6.0 -->
-		<!-- <script src="js/vue.min.js"></script> -->
+		<!-- <script src="/admin/js/vue.min.js"></script> -->
 		
 		<!-- DEV vue / v2.6.0 -->
-		<script src="js/vue.js"></script>
+		<script src="/admin/js/vue.js"></script>
 		
 		<!-- Vue Router v3.1.3 -->
-		<script src="js/vue-router.js"></script>
+		<script src="/admin/js/vue-router.js"></script>
 
 		<!-- Axios v0.19.0 -->
-		<script src="js/axios.min.js"></script>
+		<script src="/admin/js/axios.min.js"></script>
 
 		<!-- VueX v3.1.2 -->
-		<script src="js/vuex.js"></script>
+		<script src="/admin/js/vuex.js"></script>
 
 		<!-- Vue Loader -->
 		<!-- <script src="https://unpkg.com/http-vue-loader@1.4.1/src/httpVueLoader.js"></script> -->
@@ -43,7 +43,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&family=Ubuntu+Mono&display=swap" rel="stylesheet">
 
 		<!-- Datepicker Styling -->
-		<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
+		<link rel="stylesheet" type="text/css" href="/admin/assets/css/daterangepicker.css" />
 
 		<style>
 		</style>
@@ -59,39 +59,39 @@
 	</div>
 
 	<!-- Extra Libraries -->
-	<script type="text/javascript" src="js/lib/moment.min.js"></script>
-	<script type="text/javascript" src="js/lib/later.min.js"></script>
-	<script type="text/javascript" src="js/lib/prettycron.js"></script>
-	<script type="text/javascript" src="js/lib/jquery-3.4.1.min.js"></script>
-	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+	<script type="text/javascript" src="/admin/js/lib/moment.min.js"></script>
+	<script type="text/javascript" src="/admin/js/lib/later.min.js"></script>
+	<script type="text/javascript" src="/admin/js/lib/prettycron.js"></script>
+	<script type="text/javascript" src="/admin/js/lib/jquery-3.4.1.min.js"></script>
+	<script type="text/javascript" src="/admin/js/lib/daterangepicker.min.js"></script>
 
 	<!-- Base Components -->
-	<script type="text/javascript" src="js/components/ClusterOverview.vue.js"></script>
-	<script type="text/javascript" src="js/components/ClusterInfo.vue.js"></script>
-	<script type="text/javascript" src="js/components/ClusterStatus.vue.js"></script>
-	<script type="text/javascript" src="js/components/Backups.vue.js"></script>
-	<script type="text/javascript" src="js/components/PgConfig.vue.js"></script>
-	<script type="text/javascript" src="js/components/PoolConfig.vue.js"></script>
-	<script type="text/javascript" src="js/components/BackupConfig.vue.js"></script>
-	<script type="text/javascript" src="js/components/SGProfiles.vue.js"></script>
-	<script type="text/javascript" src="js/components/Grafana.vue.js"></script>
-	<script type="text/javascript" src="js/components/Logs.vue.js"></script>
+	<script type="text/javascript" src="/admin/js/components/ClusterOverview.vue.js"></script>
+	<script type="text/javascript" src="/admin/js/components/ClusterInfo.vue.js"></script>
+	<script type="text/javascript" src="/admin/js/components/ClusterStatus.vue.js"></script>
+	<script type="text/javascript" src="/admin/js/components/Backups.vue.js"></script>
+	<script type="text/javascript" src="/admin/js/components/PgConfig.vue.js"></script>
+	<script type="text/javascript" src="/admin/js/components/PoolConfig.vue.js"></script>
+	<script type="text/javascript" src="/admin/js/components/BackupConfig.vue.js"></script>
+	<script type="text/javascript" src="/admin/js/components/SGProfiles.vue.js"></script>
+	<script type="text/javascript" src="/admin/js/components/Grafana.vue.js"></script>
+	<script type="text/javascript" src="/admin/js/components/Logs.vue.js"></script>
 
 	<!-- Action Components -->
-	<script type="text/javascript" src="js/components/Create.vue.js"></script>
-	<script type="text/javascript" src="js/components/forms/CreateCluster.vue.js"></script>
-	<script type="text/javascript" src="js/components/forms/CreateProfile.vue.js"></script>
-	<script type="text/javascript" src="js/components/forms/CreatePGConfig.vue.js"></script>
-	<script type="text/javascript" src="js/components/forms/CreatePoolConfig.vue.js"></script>
-	<script type="text/javascript" src="js/components/forms/CreateBackupConfig.vue.js"></script>
-	<script type="text/javascript" src="js/components/forms/CreateBackup.vue.js"></script>
+	<script type="text/javascript" src="/admin/js/components/forms/CreateCluster.vue.js"></script>
+	<script type="text/javascript" src="/admin/js/components/forms/CreateProfile.vue.js"></script>
+	<script type="text/javascript" src="/admin/js/components/forms/CreatePGConfig.vue.js"></script>
+	<script type="text/javascript" src="/admin/js/components/forms/CreatePoolConfig.vue.js"></script>
+	<script type="text/javascript" src="/admin/js/components/forms/CreateBackupConfig.vue.js"></script>
+	<script type="text/javascript" src="/admin/js/components/forms/CreateBackup.vue.js"></script>
+	<script type="text/javascript" src="/admin/js/components/NotFound.vue.js"></script>
 
 	<!-- Layout Components -->
-	<script type="text/javascript" src="js/components/Side.vue.js"></script>
-	<script type="text/javascript" src="js/components/Nav.vue.js"></script>
+	<script type="text/javascript" src="/admin/js/components/Side.vue.js"></script>
+	<script type="text/javascript" src="/admin/js/components/Nav.vue.js"></script>
 
 	<!-- General Scripts -->
-	<script type="text/javascript" src="js/stackgres.js"></script>
+	<script type="text/javascript" src="/admin/js/stackgres.js"></script>
 
 </body>
 </html>
