--- a/stackgres-k8s/src/admin-ui/public/not-found.html
+++ b/stackgres-k8s/src/admin-ui/public/not-found.html
@@ -1,3 +1,35 @@
-The resource you're looking for doesn't exist
+<!DOCTYPE html>
+<html lang="en" xml:lang="en">
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>StackGres | Resource not Found</title>
+		<meta name="description" content="">
+		<meta name="author" content="">
+		<meta name="robots" content="index, follow">
 
-<a href="/admin/">Back to Dashboard</a>
+		<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+		<link rel="manifest" href="img/favicon/site.webmanifest">
+		<link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#00adb5">
+		<meta name="msapplication-TileColor" content="#00adb5">
+		<meta name="theme-color" content="#f0f0f0">
+
+		<link rel="stylesheet" type="text/css" href="/admin/style.css">
+    </head>
+<body>
+
+    <!-- <div id="loader"></div> -->
+    
+    <div id="app">
+        <aside id="nav" class="disabled">
+            <div id="logo"><svg xmlns="http://www.w3.org/2000/svg" width="29.997" height="25.348"><path d="M0 14.125l6.78 7.769h16.438l6.779-7.769-6.779-7.769H6.78z" fill="#42a8c8"></path><path fill="#426d88" d="M6.78 21.894h16.443v3.455H6.78z"></path><path d="M6.78 25.348L0 17.574v-3.45l6.78 7.77z" fill="#428bb4"></path><path d="M23.218 25.348l6.779-7.769v-3.454l-6.779 7.769z" fill="#16657c"></path><g><path d="M28.213 12.882c0-2.882-5.92-5.219-13.215-5.219s-13.21 2.336-13.21 5.219 5.915 5.219 13.21 5.219 13.215-2.337 13.215-5.219z" fill="#39b54a"></path><path d="M28.213 12.882c0 2.882-5.92 5.219-13.215 5.219s-13.21-2.336-13.21-5.219v2.873c.91 2.533 6.525 5.219 13.21 5.219s12.3-2.687 13.215-5.219v-2.873z" fill="#009245"></path></g><g><path d="M.678 8.302l14.323 8.3 14.323-8.3-14.323-8.3z" fill="#f2c63f"></path><path d="M.678 8.302v3.235l14.323 8.3v-3.235z" fill="#f2b136"></path><path d="M29.324 8.302L15 16.602v3.235l14.324-8.3z" fill="#f2a130"></path></g><g><path d="M3.846 10.368l22.307-3.242-5.657-6.5z" fill="#ff7124"></path><path d="M3.846 10.368l22.307-3.242v2.928L3.846 13.295z" fill="#d93d1b"></path></g></svg> <h1>STACK<strong>GRES</strong></h1></div> 
+        </aside>        
+        <div id="notFound" class="center">
+            <p>The resource you're looking for doesn't exist</p><br/><br/>
+            <a class="btn" href="/admin/">Back to Dashboard</a>
+        </div>
+    </div>
+</body>
+</html>
