fix: prevent forms reloading when submit is successful

--- a/stackgres-k8s/src/admin-ui/public/index.html
+++ b/stackgres-k8s/src/admin-ui/public/index.html
@@ -8,11 +8,11 @@
 		<meta name="author" content="">
 		<meta name="robots" content="index, follow">
 
-		<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
-		<link rel="manifest" href="img/favicon/site.webmanifest">
-		<link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#00adb5">
+		<link rel="apple-touch-icon" sizes="180x180" href="/admin/img/favicon/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/admin/img/favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/admin/img/favicon/favicon-16x16.png">
+		<link rel="manifest" href="/admin/img/favicon/site.webmanifest">
+		<link rel="mask-icon" href="/admin/img/favicon/safari-pinned-tab.svg" color="#00adb5">
 		<meta name="msapplication-TileColor" content="#00adb5">
 		<meta name="theme-color" content="#f0f0f0">
 
@@ -76,10 +76,7 @@
 	<script type="text/javascript" src="/admin/js/components/SGProfiles.vue.js"></script>
 	<script type="text/javascript" src="/admin/js/components/Grafana.vue.js"></script>
 	<script type="text/javascript" src="/admin/js/components/Logs.vue.js"></script>
-<<<<<<< HEAD
 	<script type="text/javascript" src="/admin/js/components/LogsServer.vue.js"></script>
-=======
->>>>>>> 77f020e205d063bdb7c39134de579c414689e572
 
 	<!-- Action Components -->
 	<script type="text/javascript" src="/admin/js/components/forms/CreateCluster.vue.js"></script>
@@ -88,10 +85,7 @@
 	<script type="text/javascript" src="/admin/js/components/forms/CreatePoolConfig.vue.js"></script>
 	<script type="text/javascript" src="/admin/js/components/forms/CreateBackupConfig.vue.js"></script>
 	<script type="text/javascript" src="/admin/js/components/forms/CreateBackup.vue.js"></script>
-<<<<<<< HEAD
 	<script type="text/javascript" src="/admin/js/components/forms/CreateLogsServer.vue.js"></script>
-=======
->>>>>>> 77f020e205d063bdb7c39134de579c414689e572
 	<script type="text/javascript" src="/admin/js/components/NotFound.vue.js"></script>
 
 	<!-- Layout Components -->
