fix: cluster scripts not showing on the UI when set via secret keys or config maps

--- a/stackgres-k8s/src/admin-ui/public/index.html
+++ b/stackgres-k8s/src/admin-ui/public/index.html
@@ -22,10 +22,10 @@
 		<script type="text/javascript" src="/admin/js/lib/vue-markdown-2.2.4.js"></script>
 
 		<!-- PROD vue / v2.6.0 -->
-		<!-- <script src="/admin/js/vue.min.js"></script> -->
+		<script src="/admin/js/vue.min.js"></script>
 		
 		<!-- DEV vue / v2.6.0 -->
-		<script src="/admin/js/vue.js"></script>
+		<!-- <script src="/admin/js/vue.js"></script> -->
 		
 		<!-- Vue Router v3.1.3 -->
 		<script src="/admin/js/vue-router.js"></script>
