add: SG 1.0 stylesheet

--- a/stackgres-k8s/src/admin-ui/public/index.html
+++ b/stackgres-k8s/src/admin-ui/public/index.html
@@ -17,6 +17,7 @@
 		<meta name="theme-color" content="#f0f0f0">
 
 		<link rel="stylesheet" type="text/css" href="/admin/style.css">
+		<link rel="stylesheet" type="text/css" href="/admin/assets/css/sg-1.0.css">
 
 		<!-- Vue.js Markdown / v2.2.4 -->
 		<script type="text/javascript" src="/admin/js/lib/vue-markdown-2.2.4.js"></script>
