fix: ui resesign wip

--- a/stackgres-k8s/src/admin-ui/public/index.html
+++ b/stackgres-k8s/src/admin-ui/public/index.html
@@ -41,7 +41,8 @@
 		<!-- <script src="https://unpkg.com/http-vue-loader@1.4.1/src/httpVueLoader.js"></script> -->
 
 		<!-- Nunito & Ubuntu Mono Fonts -->
-		<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&family=Ubuntu+Mono&display=swap" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600;700&family=Ubuntu+Mono:ital@1&display=swap" rel="stylesheet">
 
 		<!-- Datepicker Styling -->
 		<link rel="stylesheet" type="text/css" href="/admin/assets/css/daterangepicker.css" />
