--- a/stackgres-k8s/src/admin-ui/public/index.html
+++ b/stackgres-k8s/src/admin-ui/public/index.html
@@ -1,107 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" xml:lang="en">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>StackGres</title>
-		<meta name="description" content="">
-		<meta name="author" content="">
-		<meta name="robots" content="index, follow">
-
-		<link rel="apple-touch-icon" sizes="180x180" href="/admin/img/favicon/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/admin/img/favicon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/admin/img/favicon/favicon-16x16.png">
-		<link rel="manifest" href="/admin/img/favicon/site.webmanifest">
-		<link rel="mask-icon" href="/admin/img/favicon/safari-pinned-tab.svg" color="#00adb5">
-		<meta name="msapplication-TileColor" content="#00adb5">
-		<meta name="theme-color" content="#f0f0f0">
-
-		<link rel="stylesheet" type="text/css" href="/admin/style.css">
-		<link rel="stylesheet" type="text/css" href="/admin/assets/css/sg-1.0.css">
-
-		<!-- Vue.js Markdown / v2.2.4 -->
-		<script type="text/javascript" src="/admin/js/lib/vue-markdown-2.2.4.js"></script>
-
-		<!-- PROD vue / v2.6.0 -->
-		<script src="/admin/js/vue.min.js"></script>
-		
-		<!-- DEV vue / v2.6.0 -->
-		<!-- <script src="/admin/js/vue.js"></script> -->
-		
-		<!-- Vue Router v3.1.3 -->
-		<script src="/admin/js/vue-router.js"></script>
-
-		<!-- Axios v0.19.0 -->
-		<script src="/admin/js/axios.min.js"></script>
-
-		<!-- VueX v3.1.2 -->
-		<script src="/admin/js/vuex.js"></script>
-
-		<!-- Vue Loader -->
-		<!-- <script src="https://unpkg.com/http-vue-loader@1.4.1/src/httpVueLoader.js"></script> -->
-
-		<!-- Nunito & Ubuntu Mono Fonts -->
-		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600;700&family=Ubuntu+Mono:ital@1&display=swap" rel="stylesheet">
-
-		<!-- Datepicker Styling -->
-		<link rel="stylesheet" type="text/css" href="/admin/assets/css/daterangepicker.css" />
-
-		<style></style>
-	</head>
-<body>
-
-	<!-- <div id="loader"></div> -->
-	
-	<div id="app">
-		<sg-nav></sg-nav>
-		<sg-side></sg-side>
-		<router-view id="main" :key="$route.path"></router-view>
-		<div id="contentTooltip">
-			<div class="close"></div>
-			<div class="info">
-				<span class="close">CLOSE</span>
-				<div class="content"></div>
-			</div>
-		</div>
-	</div>
-
-	<!-- Extra Libraries -->
-	<script type="text/javascript" src="/admin/js/lib/moment.min.js"></script>
-	<script type="text/javascript" src="/admin/js/lib/later.min.js"></script>
-	<script type="text/javascript" src="/admin/js/lib/prettycron.js"></script>
-	<script type="text/javascript" src="/admin/js/lib/jquery-3.4.1.min.js"></script>
-	<script type="text/javascript" src="/admin/js/lib/daterangepicker.min.js"></script>
-
-	<!-- Base Components -->
-	<script type="text/javascript" src="/admin/js/components/ClusterOverview.vue.js"></script>
-	<script type="text/javascript" src="/admin/js/components/ClusterInfo.vue.js"></script>
-	<script type="text/javascript" src="/admin/js/components/ClusterStatus.vue.js"></script>
-	<script type="text/javascript" src="/admin/js/components/Backups.vue.js"></script>
-	<script type="text/javascript" src="/admin/js/components/PgConfig.vue.js"></script>
-	<script type="text/javascript" src="/admin/js/components/PoolConfig.vue.js"></script>
-	<script type="text/javascript" src="/admin/js/components/BackupConfig.vue.js"></script>
-	<script type="text/javascript" src="/admin/js/components/SGProfiles.vue.js"></script>
-	<script type="text/javascript" src="/admin/js/components/Grafana.vue.js"></script>
-	<script type="text/javascript" src="/admin/js/components/Logs.vue.js"></script>
-	<script type="text/javascript" src="/admin/js/components/LogsServer.vue.js"></script>
-
-	<!-- Action Components -->
-	<script type="text/javascript" src="/admin/js/components/forms/CreateCluster.vue.js"></script>
-	<script type="text/javascript" src="/admin/js/components/forms/CreateProfile.vue.js"></script>
-	<script type="text/javascript" src="/admin/js/components/forms/CreatePGConfig.vue.js"></script>
-	<script type="text/javascript" src="/admin/js/components/forms/CreatePoolConfig.vue.js"></script>
-	<script type="text/javascript" src="/admin/js/components/forms/CreateBackupConfig.vue.js"></script>
-	<script type="text/javascript" src="/admin/js/components/forms/CreateBackup.vue.js"></script>
-	<script type="text/javascript" src="/admin/js/components/forms/CreateLogsServer.vue.js"></script>
-	<script type="text/javascript" src="/admin/js/components/NotFound.vue.js"></script>
-
-	<!-- Layout Components -->
-	<script type="text/javascript" src="/admin/js/components/Side.vue.js"></script>
-	<script type="text/javascript" src="/admin/js/components/Nav.vue.js"></script>
-
-	<!-- General Scripts -->
-	<script type="text/javascript" src="/admin/js/stackgres.js"></script>
-
-</body>
+<html lang="">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <title><%= htmlWebpackPlugin.options.title %></title>
+  </head>
+  <body>
+    <noscript>
+      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    </noscript>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
