--- a/stackgres-k8s/src/admin-ui/public/index.html
+++ b/stackgres-k8s/src/admin-ui/public/index.html
@@ -1,17 +1,46 @@
 <!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<html lang="en" xml:lang="en">
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>StackGres</title>
+		<meta name="description" content="">
+		<meta name="author" content="">
+		<meta name="robots" content="index, follow">
+
+		<link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/favicon-16x16.png">
+		<link rel="manifest" href="/assets/img/favicon/site.webmanifest">
+		<link rel="mask-icon" href="/assets/img/favicon/safari-pinned-tab.svg" color="#00adb5">
+		<meta name="msapplication-TileColor" content="#00adb5">
+		<meta name="theme-color" content="#f0f0f0">
+
+		<link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+
+		<!-- Google Webfonts Import -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600;700&family=Ubuntu+Mono:ital@1&display=swap" rel="stylesheet">
+
+		<!-- Datepicker Styling -->
+		<link rel="stylesheet" type="text/css" href="/assets/css/daterangepicker.css" />
+
+		<style></style>
+	</head>
+<body>
+
+	<noscript>
+		<strong>We're sorry but StackGres doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+	</noscript>
+	
+	<div id="app"><div>
+
+	<!-- Extra Libraries -->
+	<script type="text/javascript" src="/assets/js/lib/jquery-3.4.1.min.js"></script>
+	<script type="text/javascript" src="/assets/js/lib/vue-markdown-2.2.4.js"></script>
+	<script type="text/javascript" src="/assets/js/lib/moment.min.js"></script>
+	<script type="text/javascript" src="/assets/js/lib/later.min.js"></script>
+	<script type="text/javascript" src="/assets/js/lib/prettycron.js"></script>
+	<script type="text/javascript" src="/assets/js/lib/daterangepicker.min.js"></script>
+</body>
 </html>
