refactor: configure vue proxy for development api calls

--- a/stackgres-k8s/src/admin-ui/public/index.html
+++ b/stackgres-k8s/src/admin-ui/public/index.html
@@ -17,6 +17,7 @@
 		<meta name="theme-color" content="#f0f0f0">
 
 		<link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+		<link rel="stylesheet" type="text/css" href="/assets/css/sg-1.0.css">
 
 		<!-- Google Webfonts Import -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
