fix: make sure UI assets area loaded from /admin

--- a/stackgres-k8s/src/admin-ui/public/index.html
+++ b/stackgres-k8s/src/admin-ui/public/index.html
@@ -8,23 +8,23 @@
 		<meta name="author" content="">
 		<meta name="robots" content="index, follow">
 
-		<link rel="apple-touch-icon" sizes="180x180" href="/assets/img/favicon/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/favicon-16x16.png">
-		<link rel="manifest" href="/assets/img/favicon/site.webmanifest">
-		<link rel="mask-icon" href="/assets/img/favicon/safari-pinned-tab.svg" color="#00adb5">
+		<link rel="apple-touch-icon" sizes="180x180" href="/admin/assets/img/favicon/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/admin/assets/img/favicon/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/admin/assets/img/favicon/favicon-16x16.png">
+		<link rel="manifest" href="/admin/assets/img/favicon/site.webmanifest">
+		<link rel="mask-icon" href="/admin/assets/img/favicon/safari-pinned-tab.svg" color="#00adb5">
 		<meta name="msapplication-TileColor" content="#00adb5">
 		<meta name="theme-color" content="#f0f0f0">
 
-		<link rel="stylesheet" type="text/css" href="/assets/css/style.css">
-		<link rel="stylesheet" type="text/css" href="/assets/css/sg-1.0.css">
+		<link rel="stylesheet" type="text/css" href="/admin/assets/css/style.css">
+		<link rel="stylesheet" type="text/css" href="/admin/assets/css/sg-1.0.css">
 
 		<!-- Google Webfonts Import -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600;700&family=Ubuntu+Mono:ital@1&display=swap" rel="stylesheet">
 
 		<!-- Datepicker Styling -->
-		<link rel="stylesheet" type="text/css" href="/assets/css/daterangepicker.css" />
+		<link rel="stylesheet" type="text/css" href="/admin/assets/css/daterangepicker.css" />
 
 		<style></style>
 	</head>
@@ -37,11 +37,11 @@
 	<div id="app"><div>
 
 	<!-- Extra Libraries -->
-	<script type="text/javascript" src="/assets/js/lib/jquery-3.4.1.min.js"></script>
-	<script type="text/javascript" src="/assets/js/lib/vue-markdown-2.2.4.js"></script>
-	<script type="text/javascript" src="/assets/js/lib/moment.min.js"></script>
-	<script type="text/javascript" src="/assets/js/lib/later.min.js"></script>
-	<script type="text/javascript" src="/assets/js/lib/prettycron.js"></script>
-	<script type="text/javascript" src="/assets/js/lib/daterangepicker.min.js"></script>
+	<script type="text/javascript" src="/admin/assets/js/lib/jquery-3.4.1.min.js"></script>
+	<script type="text/javascript" src="/admin/assets/js/lib/vue-markdown-2.2.4.js"></script>
+	<script type="text/javascript" src="/admin/assets/js/lib/moment.min.js"></script>
+	<script type="text/javascript" src="/admin/assets/js/lib/later.min.js"></script>
+	<script type="text/javascript" src="/admin/assets/js/lib/prettycron.min.js"></script>
+	<script type="text/javascript" src="/admin/assets/js/lib/daterangepicker.min.js"></script>
 </body>
 </html>
