--- a/stackgres-k8s/src/admin-ui/public/index.html
+++ b/stackgres-k8s/src/admin-ui/public/index.html
@@ -27,8 +27,8 @@
 		<!-- DEV vue / v2.6.0 -->
 		<!-- <script src="/admin/js/vue.js"></script> -->
 		
-		<!-- Vue Router v3.1.3 -->
-		<script src="/admin/js/vue-router.js"></script>
+		<!-- Vue Router v3.5.1 -->
+		<script src="/admin/js/vue-router.min.js"></script>
 
 		<!-- Axios v0.19.0 -->
 		<script src="/admin/js/axios.min.js"></script>
